<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="359dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/tv_about"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtlf"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/tv_tlf"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/tv_direccion"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtlf" />

    <TextView
        android:id="@+id/tvPrice3"
        android:layout_width="371dp"
        android:layout_height="174dp"
        android:layout_marginBottom="32dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/tv_info"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPrice3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDireccion"
        app:srcCompat="@drawable/santogal" />
</androidx.constraintlayout.widget.ConstraintLayout>