<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".CarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tvTitle"
                android:textAlignment="center"
                android:textColor="@color/principal"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRef"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@color/cardview_dark_background"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRef">

                <Button
                    android:id="@+id/btLeft"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50sp"
                    android:layout_marginRight="50sp"
                    android:layout_weight="1"

                    app:icon="@drawable/ic_baseline_arrow_circle_left_24"
                    app:iconGravity="textStart"
                    app:iconSize="50sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btRight"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50sp"
                    android:layout_marginRight="50sp"
                    android:layout_weight="1"

                    app:icon="@drawable/ic_baseline_arrow_circle_right_24"
                    app:iconGravity="textStart"
                    app:iconSize="50sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ivdesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvColor" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilCambio" />

            <TextView
                android:id="@+id/tvPotencia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDesc" />

            <TextView
                android:id="@+id/tvNPuertas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:background="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPotencia" />


            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/cardview_dark_background"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

            <TextView
                android:id="@+id/tvColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/cardview_dark_background"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUrl" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilKm"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvYear"
                app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
                app:startIconTint="@color/principal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etKm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:elegantTextHeight="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUbi"
                android:layout_width="0dp"
                android:layout_height="65dp"

                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilKm"
                app:startIconDrawable="@drawable/ic_baseline_place_24"
                app:startIconTint="@color/principal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUbi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:elegantTextHeight="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCombustible"
                android:layout_width="0dp"
                android:layout_height="65dp"

                android:layout_marginStart="16dp"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilUbi"
                app:startIconDrawable="@drawable/ic_baseline_bolt_24"
                app:startIconTint="@color/principal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCombustible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:elegantTextHeight="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCambio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginStart="16dp"

                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                app:endIconMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilCombustible"
                app:startIconDrawable="@drawable/ic_baseline_format_list_numbered_24"
                app:startIconTint="@color/principal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCambio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:elegantTextHeight="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/zommedLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B70E0A0A"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btExit"
            android:layout_width="45dp"
            android:layout_height="51dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/principal"
            android:src="@android:drawable/btn_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/ivZoom"
            android:layout_width="307dp"
            android:layout_height="301dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>